[package]
name = "lds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num='0.4.0'
ndarray={version='0.15.4', features=['rayon']}
ndarray-npy='0.8.1'
rsdsp={path="../rsdsp"}
rustfft='6.0.1'
rayon = '1.5.1'
serde_yaml = '0.8.24'
rand='0.8.5'
rand_distr='0.4.3'
clap='3.2.5'
itertools-num='0.1.3'
progress_bar = "1.0.2"

[dependencies.serde]
features = ['derive']
version = '1.0.137'
