[dependencies]
clap = '4.5.4'
itertools-num = '0.1.3'
ndarray-npy = '0.8.1'
num = '0.4.1'
progress_bar = '1.0.5'
rand = '0.9.0-alpha.1'
rand_distr = '0.5.0-alpha.1'
rayon = '1.10.0'
rustfft = '6.2.0'
serde_yaml = '0.9.34+deprecated'

[dependencies.ndarray]
features = ['rayon']
version = '0.15.6'

[dependencies.rsdsp]
path = '../rsdsp'

[dependencies.serde]
features = ['derive']
version = '1.0.197'

[package]
edition = '2021'
name = 'lds'
version = '0.1.0'
